--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sentry/node": "5.15.2",
     "bcryptjs": "^2.4.3",
     "bee-queue": "^1.2.3",
+    "cors": "^2.8.5",
     "date-fns": "^2.0.0-beta.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -34,7 +35,7 @@
     "yup": "^0.27.0"
   },
   "scripts": {
-      "dev:debug": "nodemon --inspect src/server.js",
+    "dev:debug": "nodemon --inspect src/server.js",
     "dev": "nodemon src/server.js",
     "queue": "nodemon src/queue.js"
   }
