--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns-tz": "^1.0.10",
     "history": "^4.10.1",
     "immer": "^6.0.3",
+    "lodash.debounce": "^4.0.8",
     "polished": "^3.5.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -31,6 +32,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.0.1",
+    "use-lodash-debounce": "^1.1.0",
     "yup": "^0.28.3"
   },
   "scripts": {
