--- a/.env.example
+++ b/.env.example
@@ -2,18 +2,16 @@ APP_URL=http://localhost:3333
 NODE_ENV=development
 
 #AUTH
-APP_SECRET=
+APP_SECRET=appsecret
 
 #DATABASE POSTGRES
-DB_HOST=
-DB_USER=
-DB_PASS=
-DB_NAME=
 
-#MONGO
-MONGO_URL=
+DB_HOST=localhost
+DB_USER=postgres
+DB_PASS=docker
+DB_NAME=FastFeet #Nome utilizado na criação do banco de dados
 
-#REDIS
+# REDIS
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 
