--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ APP_SECRET=appsecret
 DB_HOST=localhost
 DB_USER=postgres
 DB_PASS=docker
-DB_NAME=FastFeet #Nome utilizado na criação do banco de dados
+DB_NAME=FastFeet
 
 # REDIS
 REDIS_HOST=127.0.0.1
