--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "yup": "^0.28.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -65,6 +65,11 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
-    "prettier": "^1.19.1"
+    "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
+    "prettier": "^1.19.1",
+    "react-app-rewired": "^2.1.5",
+    "babel-plugin-root-import": "^6.5.0",
+    "customize-cra": "^0.9.1"
+
   }
 }
