Revert "scaffolding application with dev dependencies"
This reverts commit 211e699e49aaeda97781e2df665433eb4771831a.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,9 @@
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
